# serializd-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: documentation.yaml
docs/: api.rst  client.rst  conf.py  development.rst  exceptions.rst  index.rst  models.rst  requirements.txt  usage.rst
serializd/: __init__.py  client.py  consts.py  exceptions.py
serializd/models/: actions.py  auth.py  season.py  show.py
