[tool.poetry]
name = "serializd-py"
version = "0.0.1"
description = "Python API library for Serializd.com"
authors = ["Velocidensity"]
license = "MIT"
readme = "README.md"
packages = [{include = "serializd_py"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
flake8-pyproject = "^1.1.0.post0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120

[tool.pyright]
venvPath = [".venv"]

[tool.mypy]
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
