[tool.poetry]
name = "serializd-py"
version = "0.1.1"
description = "Python API library for Serializd.com"
authors = ["Velocidensity"]
license = "MIT"
readme = "README.md"
packages = [{include = "serializd"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
pydantic = "^2.5.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.991"
ruff = "^0.0.286"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
furo = "^2023.7.26"
autodoc-pydantic = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "A",   # flake8-builtins
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle (Error)
    "F",   # pyflakes
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "W"    # pycodestyle (Warning)
]
line-length = 110
ignore = [
    "SIM105", # suppressible-exception
]
exclude = [
    "serializd/models", "docs"
]

[tool.isort]
line_length = 110
multi_line_output = 3

[tool.pyright]
venvPath = [".venv"]

[tool.mypy]
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
plugins = ["pydantic.mypy"]
