[project]
name = "serializd-py"
version = "0.1.4"
description = "Python API library for Serializd.com"
authors = [{ name = "Velocidensity" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx",
    "pydantic",
]

[dependency-groups]
dev = [
    "isort",
    "pre-commit",
    "mypy",
    "ruff",
]
docs = [
    "sphinx",
    "furo",
    "autodoc-pydantic",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["serializd"]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
lint.select = [
    "A",   # flake8-builtins
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle (Error)
    "F",   # pyflakes
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "RSE", # flake8-raise
    "SIM", # flake8-simplify
    "W"    # pycodestyle (Warning)
]
lint.ignore = [
    "SIM105", # suppressible-exception
]
line-length = 110
exclude = [
    "serializd/models", "docs"
]

[tool.isort]
line_length = 110
multi_line_output = 3

[tool.pyright]
venvPath = [".venv"]

[tool.mypy]
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
plugins = ["pydantic.mypy"]
